k8s/demo/httproute-guestbook.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: guestbook
  namespace: demo
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: gateway-system
  hostnames:
  - "guestbook.meatcloud.io"
  rules:
  - backendRefs:
    - name: kustomize-guestbook-ui
      port: 80
